# MCP_Pokemon

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: test_pokeapi.py
src/mcp_pokemon/: server.py
src/mcp_pokemon/api/: errors.py  logging.py  main.py
src/mcp_pokemon/mcp/resources/: __init__.py  about.py
src/mcp_pokemon/mcp/tools/: __init__.py  pokemon.py
src/mcp_pokemon/pokeapi/: __init__.py  models.py  repository.py  service.py
src/mcp_pokemon/pokeapi/cache/: __init__.py  base.py  decorators.py  redis.py
src/mcp_pokemon/pokeapi/client/: __init__.py  base.py  exceptions.py
src/mcp_pokemon/pokeapi/models/: __init__.py  base.py  common.py  pokemon.py
src/mcp_pokemon/pokeapi/repositories/: __init__.py  interfaces.py  pokemon.py
src/mcp_pokemon/pokeapi/services/: __init__.py  pokemon.py
tests/: conftest.py
tests/api/: test_endpoints.py  test_errors.py  test_logging.py
tests/pokeapi/: test_client.py  test_models.py
