[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_pokemon"
version = "0.1.0"
description = "A Pokemon-focused implementation of the Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Daniel Yoshizawa", email = "yoshidanielrenan@gmail.com" }
]
dependencies = [
    "mcp>=1.6.0",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.104.1",
    "httpx>=0.25.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310" 