[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_pokemon"
version = "0.1.0"
description = "MCP server for Pokemon data"
authors = [
    {name = "Daniel", email = "daniel@example.com"}
]
dependencies = [
    "mcp",
    "uvicorn",
    "requests",
    "pydantic>=2.0.0"
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310" 