[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_pokemon"
version = "0.1.0"
description = "MCP server for Pokemon data"
authors = [
    {name = "Daniel Yoshizawa", email = "yoshidanielcwb@gmail.com"}
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "aiohttp>=3.9.3",
    "python-dotenv>=1.0.1",
    "mcp>=0.1.0",
    "redis>=5.0.1",
    "aioredis>=2.0.1"
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort",
    "mypy"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310" 